--- a/dev_tool/docker-compose.yml
+++ b/dev_tool/docker-compose.yml
@@ -16,3 +16,19 @@ services:
     command: ["/tmp/build_mros2.bash"]
     env_file:
       - .env
+  esp_monitor:
+    build:
+      context: ./docker
+      dockerfile: esp_idf.dockerfile
+    container_name: esp_monitor
+    volumes:
+      - ${MROS2_DIR}:/mros2-esp32
+      - ${WORKSPACE}:/mros2-esp32/workspace/target
+    devices:
+      - ${PORT}:${PORT}
+    environment:
+      - PORT=${PORT}
+      - TARGET=${TARGET}
+    command: ["/tmp/monitor.bash"]
+    env_file:
+      - .env
